--- a/Cafe Management System/Web.config
+++ b/Cafe Management System/Web.config
@@ -90,6 +90,18 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+	<system.net>
+		<mailSettings>
+			<smtp from="tweetybirdcantdie@gmail.com">
+				<network host="smtp.gmail.com"
+						 port="587"
+						 userName="tweetybirdcantdie@gmail.com"
+						 password="isptesuoiimsxdin"
+						 enableSsl="true"
+						 />
+			</smtp>
+		</mailSettings>
+	</system.net>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
